--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -18,6 +18,7 @@
       src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"
     ></script>
     <link rel="stylesheet" href="../style.css" />
+    <script src="../commands/commands.ts"></script>
   </head>
 
   <body style="width: 100%; height: 100%; margin: 0; padding: 0">
